--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h2>Welcome to </h2>
+            <h2>Welcome to FShop </h2>
             <p>Selamat berbelanja di website kami, Dengan senang hatii</p>
             <a href="https://www.tokopedia.com/" class="cta-button">Klik untuk belanja</a>
         </div>
